# ChangeLog for sci-astronomy/psfex
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*psfex-3.9.1 (27 Feb 2014)

  27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +psfex-3.9.1.ebuild,
  -psfex-3.9.1-r1.ebuild, metadata.xml, psfex-9999.ebuild:
  sci-astronomy/psfex: EAPI-5, autotools-utils, fixed plplot flag

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> psfex-9999.ebuild, metadata.xml:
  Drop KEYWORDS of live ebuilds

  29 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> psfex-3.9.1-r1.ebuild:
  sci-astronomy/psfex: fixed for newer plplot

*psfex-9999 (04 Jul 2012)

  04 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> psfex-3.9.1-r1.ebuild,
  +psfex-9999.ebuild:
  Live version. Prefix love

*psfex-3.9.1-r1 (28 Nov 2011)

  28 Nov 2011; Sébastien Fabbro <bicatali@gentoo.org> -psfex-3.9.1.ebuild,
  +psfex-3.9.1-r1.ebuild:
  Fixed for recent ATLAS. Switch to EAPI4

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched herd to sci-astronomy