@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*psfex-3.17.0 (21 Mar 2014)
+
+  21 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +psfex-3.17.0.ebuild,
+  psfex-9999.ebuild:
+  sci-astronomy/psfex: Add new version linked to live one
+
 *psfex-3.9.1 (27 Feb 2014)
 
   27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +psfex-3.9.1.ebuild,
